Fixed formatting on smaller screens

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,5 @@
 #contentWrapper {
-    height: 600px;
+    height: 50%;
     width: 100%;
     display: flex;
     justify-content: center;
@@ -46,4 +46,7 @@ body, h3, span, button {
     border-style: solid;
 }
 
+#barChart {
+    /* width: 300px; */
+}
 html {word-wrap: break-word;}
